<resources>
    <string name="app_name">Team 43</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add">AddActivity</string>

    <string name="Enter_Amount">Enter Amount</string>
    <string name="Description">Description</string>
    <string name="Category">Category:</string>
    <string name="Date">DATE:</string>
    <string name="Today">Today</string>
    <string name="Paid">Paid</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Edit">EDIT</string>
    <string name="Save">SAVE</string>
    <string name="Delete">Delete</string>
</resources>
