<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codeitsuisse.team43.expensetracker.Activities.AddActivity">

    <LinearLayout
        android:id="@+id/linear_layout_principle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/detail_amount"
                android:hint="@string/Enter_Amount"
                android:layout_weight="0.50" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_currency_spinner"
                android:layout_gravity="right"
                android:layout_weight="0.50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_weight="0.03">

            <TextView
                android:id="@+id/spinner_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Category"
                android:paddingTop="20dp"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_weight="0.50" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_category_spinner"
                android:layout_gravity="right" />


        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description"
            android:id="@+id/detail_description"
            android:inputType="textShortMessage"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_weight="0"
                />

            <TextView
                android:id="@+id/detail_changeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Today"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textAlignment="gravity"
                android:layout_marginLeft="100dp"
                android:layout_gravity="right"
                android:layout_weight="0.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <CheckedTextView
                android:id="@+id/detail_if_paid_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Paid"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_gravity="left"
                android:layout_weight="0.5" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        android:id="@+id/button_edit_expense"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/linear_layout_principle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete_expense"
        android:text="@string/Delete"
        android:layout_alignBottom="@+id/button_edit_expense"
        android:layout_alignParentStart="true" />


</RelativeLayout>
