<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codeitsuisse.team43.expensetracker.Activities.AddActivity">

    <LinearLayout
        android:id="@+id/linear_layout_principle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/fab_done">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/enter_amount"
                android:hint="@string/Enter_Amount"
                android:layout_weight="0.50" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currency_spinner"
                android:layout_gravity="right"
                android:layout_weight="0.50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spinner_label"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/Category"
                android:textSize="@dimen/abc_text_size_button_material"
                android:layout_weight="0.50" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_gravity="right" />


        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description"
            android:id="@+id/enter_description"
            android:inputType="textShortMessage"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textSize="@dimen/abc_text_size_button_material"
                android:layout_weight="0.50"
                />

            <TextView
                android:id="@+id/changeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Today"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_gravity="right"
                android:layout_weight="0.5" />

        </LinearLayout>


        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Paid"
            android:id="@+id/if_paid_view"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"/>

    </LinearLayout>

    <com.software.shell.fab.ActionButton
        android:id="@+id/fab_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fab_complete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fab_margin" />



</RelativeLayout>
